<resources>
    <string name="app_name">IOT BASED SMART GRID</string>
    <string name="button_one">CURRENT USAGE</string>
    <string name="button_two">PREVIOUS USAGE</string>
    <string name="button_three">BILL PAYMENT</string>
    <string name="button_four">FEATURES</string>
    <string name="button_five">CONTACT US</string>
    <string name="button_six">SETTINGS</string>
    <string name="send_button">Send</string>
    <string name="Contactuspage_text">If you have any complains or queries, please contact our customer support. You can send your queries to us via the chatbox. We will contact you within 24 hours upon recieving your request.</string>
    <string name="contactus_entertext">Enter your complaints or queries here</string>
    <string name="Team_IOTBSG">TEAM IOTBSG</string>
    <string name="Menu">Menu</string>
    <string name="Current_Reading">Current Reading</string>
    <string name="Previous_Reading">Previous Reading</string>
    <string name="average_unitcost">Average Unit Cost</string>
    <string name="total_amount">Total Amount</string>
    <string name="unit_one">1234</string>
    <string name="unit_two">900</string>
    <string name="avg_unit">5.75</string>
    <string name="contact_details">Contact us at iotbsgemsupport@gmail.com</string>
    <string name="whatsapp_details">Message us via WhatsApp 8547411716</string>
    <string name="mace_kothamangalam">MACE Kothamangalam</string>
    <string name="bill_calculator">CURRENT BILL CALCULATOR</string>
    <string name="instructions_total">To Find Your current bill amount, Enter the details in the box below.</string>
    <string name="name_one">1. Current Reading</string>
    <string name="name_two">2. Previous Month Reading</string>
    <string name="name_three">3. Price per unit</string>
    2
</resources>
